--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Conscious</title>
+  <style>
+    .tox-tinymce{
+      border: 0px solid #eee !important;
+      border-radius: 0px !important;
+    }
+  </style>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
